--- a/server/build.gradle
+++ b/server/build.gradle
@@ -17,6 +17,7 @@ repositories {
 dependencies {
 	compile group: 'net.thejavashop', name: 'javampd', version:'5.0.3'
     compile group: 'org.yaml', name: 'snakeyaml', version:'1.15'
+    compile group: 'org.java-websocket', name: 'Java-WebSocket', version:'1.3.0'
 }
 
 sourceSets {
