--- a/server/build.gradle
+++ b/server/build.gradle
@@ -18,6 +18,9 @@ dependencies {
 	compile group: 'net.thejavashop', name: 'javampd', version:'5.0.3'
     compile group: 'org.yaml', name: 'snakeyaml', version:'1.15'
     compile group: 'org.java-websocket', name: 'Java-WebSocket', version:'1.3.0'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version:'2.2.2'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version:'2.2.2'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.2.2'
 }
 
 sourceSets {
