--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "server/javampd"]
-	path = server/javampd
+[submodule "javampd"]
+	path = javampd
 	url = https://github.com/samlanning/javampd.git
