--- a/server/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
+++ b/server/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
@@ -1,7 +1,7 @@
 #org.springsource.ide.eclipse.gradle.core.preferences.GradleProjectPreferences
-#Sun Jan 24 12:24:31 GMT 2016
-build.family.org.gradle.tooling.model.eclipse.HierarchicalEclipseProject=;
+#Mon Jul 11 23:06:13 CEST 2016
+build.family.org.gradle.tooling.model.eclipse.HierarchicalEclipseProject=;javampd;
 org.springsource.ide.eclipse.gradle.classname.enableSorting=false
 org.springsource.ide.eclipse.gradle.classpath.enableSorting=true
 org.springsource.ide.eclipse.gradle.linkedresources=
-org.springsource.ide.eclipse.gradle.rootprojectloc=
+org.springsource.ide.eclipse.gradle.rootprojectloc=..
