--- a/server/build.gradle
+++ b/server/build.gradle
@@ -14,8 +14,13 @@ repositories {
     mavenCentral()
 }
 
+def logback_version = '1.1.3'
+
 dependencies {
-	compile group: 'net.thejavashop', name: 'javampd', version:'5.0.3'
+    compile group: 'org.slf4j', name: 'slf4j-api', version:'1.7.13'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: logback_version
+    compile group: 'ch.qos.logback', name: 'logback-core', version: logback_version
+    compile project(':javampd')
     compile group: 'org.yaml', name: 'snakeyaml', version:'1.15'
     compile group: 'org.java-websocket', name: 'Java-WebSocket', version:'1.3.0'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version:'2.2.2'
