--- a/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
+++ b/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
@@ -1,4 +1,4 @@
 #org.springsource.ide.eclipse.gradle.core.preferences.GradleProjectPreferences
-#Mon Jul 11 23:06:13 CEST 2016
-build.family.org.gradle.tooling.model.eclipse.HierarchicalEclipseProject=;javampd;server;
+#Tue Jul 12 20:50:18 CEST 2016
+build.family.org.gradle.tooling.model.eclipse.HierarchicalEclipseProject=;javampd;server;synesthesia;
 org.springsource.ide.eclipse.gradle.rootprojectloc=
