--- a/synesthesia/build.gradle
+++ b/synesthesia/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'maven'
+apply plugin: 'eclipse'
 
 group = 'com.samlanning.synesthesia'
 version = '0.0.1-SNAPSHOT'
@@ -9,15 +10,16 @@ description = """Synesthesia Library"""
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
-configurations.all {
+repositories {
+    mavenCentral()
 }
 
-repositories {
-     maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
-     maven { url "http://repo.maven.apache.org/maven2" }
-}
+def logback_version = '1.1.3'
 
 dependencies {
+    compile group: 'org.slf4j', name: 'slf4j-api', version:'1.7.13'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: logback_version
+    compile group: 'ch.qos.logback', name: 'logback-core', version: logback_version
 }
 
 sourceSets {
