--- a/synesthesia-composer/bower.json
+++ b/synesthesia-composer/bower.json
@@ -6,6 +6,7 @@
   ],
   "private": true,
   "devDependencies": {
-    "requirejs": "^2.2.0"
+    "requirejs": "^2.2.0",
+    "jquery": "^3.1.0"
   }
 }
