--- a/synesthesia-composer/package.json
+++ b/synesthesia-composer/package.json
@@ -12,6 +12,8 @@
     "gulp-bower": "0.0.13",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.6",
-    "typescript": "^1.8.10"
+    "gulp-typings": "^2.0.0",
+    "typescript": "^1.8.10",
+    "typings": "^1.3.1"
   }
 }
